add html folder

--- a/html/test.html
+++ b/html/test.html
@@ -10,7 +10,7 @@
 
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.0.0/mustache.min.js"></script>
 
-		<script type="text/javascript" src="js/Festerr.js"></script>
+		<script type="text/javascript" src="../js/Festerr.js"></script>
 	</head>
 
 	<body>
