--- a/html/test.html
+++ b/html/test.html
@@ -11,6 +11,8 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.0.0/mustache.min.js"></script>
 
 		<script type="text/javascript" src="../js/Festerr.js"></script>
+
+		<link rel="stylesheet" type="text/css" href="../css/EventDetail.css">
 	</head>
 
 	<body>
