--- a/README.html
+++ b/README.html
@@ -1024,7 +1024,7 @@ body .markdown-body
 <h2 id="stack"><a name="user-content-stack" href="#stack" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Stack</h2>
 <ul>
 <li>
-<p>Fester uses a nodeJS server to serve the html/css/js files to the client. The <a href="http://expressjs.com/">ExpressJS</a> framework is used for route handling, serving the user the main app when they go to the base url. Other endpoints are used to provide a REST API service for the client to access data. For example, the <code>/spotify/artists/</code> endpoint provides the client with all of a user&rsquo;s Spotify artists.   </p>
+<p>Fester uses a NodeJS server to serve the html/css/js files to the client. The <a href="http://expressjs.com/">ExpressJS</a> framework is used for route handling, serving the user the main app when they go to the base url. Other endpoints are used to provide a REST API service for the client to access data. For example, the <code>/spotify/artists/</code> endpoint provides the client with all of a user&rsquo;s Spotify artists.   </p>
 </li>
 <li>
 <p><a href="https://angularjs.org/">AngularJS</a> is a popular frontend framework developed by Google, which we have used to aide in the creation of our Single Page App (SPA). Angular provides an implementation of the Model, View, Controller (MVC) pattern. A declarative user interface allows two-way bindings to be added to HTML templates, allowing data on the page to be updated in real time when background models are changed. The app is built with reusable components (services, directives, factories) which are injected into the required views. This allows the separation of display &amp; render logic (such as DOM manipulations) from the main logic (network requests, behind-the-scenes logic), which promotes DRY code, more so than with standard JavaScript. Finally, Angular comes with a powerful testing framework, Protractor, that provides unit and integration testing for the entire front end. </p>
@@ -1126,6 +1126,7 @@ body .markdown-body
 <h2 id="running-the-site"><a name="user-content-running-the-site" href="#running-the-site" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Running the Site</h2>
 <ul>
 <li><code>cd</code> to the festerr root level folder. </li>
+<li>run <code>npm install</code> to install the necessary NodeJS packages.</li>
 <li>run <code>node server.js</code>.You should see the output <code>Festerr app listening at http://0.0.0.0:3000</code> on the prompt. </li>
 <li>Navigate to <code>localhost:3000</code> and you should see the page. </li>
 <li>We have provided a free Spotify account to use for testing. This account has several playlists containing many unique artists, allowing us to see the impact of the Festerr score. The account details are: <ul>
